--- a/coordenacao/browser/index.html
+++ b/coordenacao/browser/index.html
@@ -9,5 +9,4 @@
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<script src="./polyfills-SCHOHYNV.js" type="module"></script><script src="./main-BFRFI7GS.js" type="module"></script></body>
-</html>
+<script src="./coordenacao/browser/polyfills-SCHOHYNV.js" type="module"></script><script src="./coordenacao/browser/main-BFRFI7GS.js" type="module"></script></body> </html>
