--- a/coordenacao/browser/index.html
+++ b/coordenacao/browser/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>App</title>
-  <base href="/">
+  <base href="/coordenacao/browser">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<script src="./coordenacao/browser/polyfills-SCHOHYNV.js" type="module"></script><script src="./coordenacao/browser/main-BFRFI7GS.js" type="module"></script></body> </html>
+<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-BFRFI7GS.js" type="module"></script></body>
+</html>
